--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . -c .eslintrc.cjs --fix --ext .ts,.js,.cjs,.vue,.tsx,.jsx",
     "build:icons": "tsx resources/js/plugins/iconify/build-icons.js",
     "msw:init": "msw init public/ --save",
-    "postinstall": "npm run build:icons && npm run msw:init"
+    "postinstall": "npm run build:icons && npm run msw:init",
+    "check-env": "node -e \"console.log('VITE_API_BASE_URL:', process.env.VITE_API_BASE_URL)\""
   },
   "dependencies": {
     "@casl/ability": "6.7.1",
