--- a/.env.example
+++ b/.env.example
@@ -61,5 +61,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# Sanctum Configuration
+SANCTUM_STATEFUL_DOMAINS=localhost,127.0.0.1
+SANCTUM_TOKEN_EXPIRATION=60
+
 VITE_APP_NAME="${APP_NAME}"
 VITE_API_BASE_URL=
